--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on:
-         [ubuntu-latest]
+         ubuntu-latest
     steps:
     - name: Checkout source
       uses: actions/checkout@v3
