--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Build Docker Image
       run: docker build -t armah/mortgagecalc-spring-boot-docker .
     - name: Publish image to docker hub
-      # run: docker push armah/mortgagecalc-spring-boot-docker:latest
-      run: docker push armah001/mortgagecalc-spring-boot-docker:fistdeploy
+      run: docker push armah/mortgagecalc-spring-boot-docker:latest
 
   deploy:
     needs: build
