--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,39 +6,32 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on:
+         ubuntu-latest
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
-
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Build Project
-        run: mvn clean install -DskipTests
-
-      - name: Login to Docker Hub
-        run: docker login -u "${{secrets.DOCKER_USERNAME}}" -p "${{secrets.DOCKER_PASSWORD}}"
-
-      - name: Build Docker Image
-        run: |
-          docker build -t armah/mortgagecalc-spring-boot-docker:latest .
-
-      - name: Publish image to Docker Hub
-        run: docker push armah/mortgagecalc-spring-boot-docker:latest
+    - name: Checkout source
+      uses: actions/checkout@v3
+    - name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+    - name: Build Project
+      run: mvn clean install -DskipTests
+    - name: Login to docker hub
+      run: docker login -u "${{secrets.DOCKER_USERNAME}}" -p "${{secrets.DOCKER_PASSWORD}}"
+    - name: Build Docker Image
+      run: docker build -t armah/mortgagecalc-spring-boot-docker .
+    - name: Publish image to docker hub
+      run: docker push armah/mortgagecalc-spring-boot-docker:latest
 
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: [aws-ec2]
     steps:
-      - name: Pull Image from Docker Hub
+      - name: Pull Image from docker hub
         run: docker pull armah/mortgagecalc-spring-boot-docker:latest
-
       - name: Delete old container
-        run: docker rm -f mortgagecalc-container || true
-
-      - name: Run Docker container
-        run: docker run -d -p 8080:8080 --name mortgagecalc-container armah/mortgagecalc-spring-boot-docker:latest
+        run: docker rm -f mortgagecalc-container
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name mortgagecalc-container armah001/mortgagecalc-spring-boot-docker
