--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,10 @@ jobs:
     - name: Login to docker hub
       run: docker login -u "${{secrets.DOCKER_USERNAME}}" -p "${{secrets.DOCKER_PASSWORD}}"
     - name: Build Docker Image
-      run: docker build -t armah/mortgagecalc-spring-boot-docker .
+      run: |
+          docker build -t armah/mortgagecalc-spring-boot-docker .
+          docker tag armah/mortgagecalc-spring-boot-docker:latest armah/mortgagecalc-spring-boot-docker:tagname
+
     - name: Publish image to docker hub
       run: docker push armah/mortgagecalc-spring-boot-docker:latest
 
