--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,11 +20,13 @@ jobs:
       run: mvn clean install -DskipTests
     - name: Login to docker hub
       run: docker login -u "${{secrets.DOCKER_USERNAME}}" -p "${{secrets.DOCKER_PASSWORD}}"
-    - name: Build Docker Image
+    - name: Build Docker Image and Create Container
       run: |
           docker build -t armah/mortgagecalc-spring-boot-docker .
           docker tag armah/mortgagecalc-spring-boot-docker:latest armah/mortgagecalc-spring-boot-docker:first-image
           docker push armah/mortgagecalc-spring-boot-docker:first-image
+          docker create --name mortgagecalc-container armah/mortgagecalc-spring-boot-docker:first-image
+          docker start mortgagecalc-container
           
     - name: Publish image to docker hub
       run: |
