--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,7 +40,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKER_IMAGE}}
-            docker rm -f mortgage
-            docker run -p 8080:8080 --name mortgage --restart=on-failure -d ${{ secrets.DOCKER_IMAGE }}
+            sudo docker pull ${{ secrets.DOCKER_IMAGE}}
+            sudo docker rm -f mortgage
+            sudo docker run -p 8080:8080 --name mortgage --restart=on-failure -d ${{ secrets.DOCKER_IMAGE }}
 
